particle js overflow bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ body {
   background-size: cover;
   height: 100%;
   width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .particle-js-div {
   position: absolute;
